--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,7 @@
-baseURL = 'https://yodigi7.github.io/'
 languageCode = 'en-us'
 title = 'Anthony Buchholz'
 
-# baseurl = "/"
+baseurl = "/"
 theme = "terminal"
 paginate = 5
 
