--- a/config.toml
+++ b/config.toml
@@ -82,3 +82,7 @@ paginate = 5
         identifier = "about"
         name = "About Me"
         url = "/about"
+      [[languages.en.menu.main]]
+        identifier = "technologies"
+        name = "Technologies"
+        url = "/technologies"
